navbar completed, newsletter button formatted, corrected order of content on smaller screens

--- a/index_style.css
+++ b/index_style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #F172a1;
-    color: #f0ebf4;
+    
 }
 
 img.medium{
@@ -27,11 +27,27 @@ img.medium{
     padding: 3rem;
     background-color: #b39bc8;
     border-radius: 15px;
+    color: #f0ebf4;
 }
 
 div{
     padding: 1rem;
     border-radius: 15px;
+}
+
+.sub:hover{
+    cursor: pointer;
+    background-color: lime;
+    transition: background-color 500ms ease-in-out;
+}
+
+.navbar.scrolled {
+    background: rgb(222,192,222);
+    transition: background 250ms;
+}
+
+.navOption{
+    color: red;
 }
 
 @media (max-width: 992px){
